--- a/大三实训/打飞机/Plane/Plane/Plane.vcproj
+++ b/大三实训/打飞机/Plane/Plane/Plane.vcproj
@@ -233,6 +233,10 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\Util.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="头文件"
@@ -283,12 +287,24 @@
 				RelativePath=".\targetver.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Util.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="资源文件"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath="..\..\C++实训说明\plane\enemy.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\C++实训说明\plane\me.bmp"
+				>
+			</File>
 			<File
 				RelativePath=".\res\Plane.ico"
 				>
